--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Live for leave, your entire life.
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
-
+jekyll-sitemap
 theme: jekyll-theme-leap-day
