--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Live for leave
 author: floin
-email: v20130402@yeah.net
+email: v20130403@163.com
 description: > # this means to ignore newlines until "baseurl:"
   Live for leave, this is your entire life.
   凡事豫则立，不豫则废。言前定则不跲，事前定则不困，行前定则不疚， 道前定则不穷。
